--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = kaam_hiring_test
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = in.alvish.kaamHiringTest
+PRODUCT_BUNDLE_IDENTIFIER = in.alvish.toDone
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2024 in.alvish. All rights reserved.
