--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,11 +34,20 @@ dependencies:
   firebase_core: ^3.1.0
   flutter:
     sdk: flutter
+  freezed_annotation: ^2.4.1
+  go_router: ^14.2.0
+  hooks_riverpod: ^2.5.1
+  intl: ^0.19.0
+  json_annotation: ^4.9.0
+  riverpod_annotation: ^2.3.5
 
 dev_dependencies:
+  build_runner: ^2.4.11
   flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
+  freezed: ^2.5.2
+  json_serializable: ^6.8.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
