--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   firebase_core: ^3.1.0
   flutter:
     sdk: flutter
+  flutter_animate: ^4.5.0
   flutter_hooks: ^0.20.5
   freezed_annotation: ^2.4.1
   go_router: ^14.2.0
